2013-02-04  Holger Seelig  <holger.seelig@yahoo.de>

	* X3D.h:
	* libtitania-x3d.cproj:
	* Cast.h:
	* Hit.h:
	* Route.h:
	* Parser.h:
	* SFNode.h:
	* X3DOutput.h:
	* Parser.cpp:
	* Browser.h:
	* Proto.h:
	* Route.cpp:
	* Scene.h:
	* X3DOutput.cpp:
	* Router.cpp:
	* Scene.cpp:
	* X3DArrayField.h:
	* X3DBaseNode.cpp:
	* X3DChildObject.h:
	* Text.h:
	* ExternProto.h:
	* Text.cpp:
	* ProtoArray.cpp:
	* PointingDevice.h:
	* X3DRenderer.cpp:
	* X3DFieldDefinition.h:
	* PointingDevice.cpp:
	* NurbsSet.h:
	* ShapeContainer.cpp:
	* X3DFieldDefinition.cpp:
	* Contour2D.h:
	* BindableNodeStack.h:
	* X3DBrowserContext.cpp:
	* Box.cpp:
	* Appearance.h:
	* Inline.h:
	* AudioClip.cpp:
	* TimeSensor.cpp:
	* LineSet.h:
	* ExternProtoArray.cpp:
	* HAnimJoint.h:
	* GeoLOD.h:
	* Script.cpp:
	* PointSet.h:
	* X3DExecutionContext.h:
	* Appearance.cpp:
	* X3DShapeNode.h:
	* HAnimSegment.h:
	* Inline.cpp:
	* Sphere.cpp:
	* LayerSet.cpp:
	* DISEntityManager.h:
	* X3DShapeNode.cpp:
	* X3DExecutionContext.cpp:
	* PointSet.cpp:
	* SupportedFields.cpp:
	* StaticGroup.h:
	* HAnimHumanoid.h:
	* LoadSensor.h:
	* X3DLayerNode.h:
	* ProgramShader.h:
	* GeoMetadata.h:
	* BrowserOptions.h:
	* ComposedShader.h:
	* MultiTexture.h:
	* X3DBindableNode.cpp:
	* X3DLayerNode.cpp:
	* MovieTexture.cpp:
	* ElevationGrid.h:
	* BrowserOptions.cpp:
	* Rectangle2D.cpp:
	* jsBrowser.cpp:
	* Fog.h:
	* IndexedLineSet.h:
	* X3DPickSensorNode.h:
	* X3DUrlObject.cpp:
	* NurbsTrimmedSurface.h:
	* GeoTouchSensor.h:
	* ViewpointGroup.h:
	* NavigationInfo.h:
	* Fog.cpp:
	* X3DTexture2DNode.h:
	* ElevationGrid.cpp:
	* X3DGroupingNode.cpp:
	* IndexedLineSet.cpp:
	* RigidBody.h:
	* ViewpointGroup.cpp:
	* GeoTouchSensor.cpp:
	* X3DBoundedObject.cpp:
	* X3DViewpointNode.h:
	* X3DPrototypeInstance.cpp:
	* X3DGeometryNode.cpp:
	* IndexedFaceSet.cpp:
	* jsX3DArrayField.h:
	* jsMFNode.h:
	* X3DTexture2DNode.cpp:
	* X3DViewpointObject.h:
	* RenderingProperties.cpp:
	* ComposedTexture3D.h:
	* TextureProperties.cpp: